--- a/m/md/mdc/mdc.edu.html
+++ b/m/md/mdc/mdc.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mdc.edu privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217224613id_/http%3A//mdc.edu/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mdc.edu privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615073442id_/http%3A//www.mdc.edu/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>M-DCC Privacy</title>
@@ -144,7 +144,7 @@ function studentopen(which) {
     <td align="center" valign="top" class="bluebgcolor"><img src="/college_wide/newtemplate/assets/images/transparent.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td height="48" align="center" valign="top" class="bottomenu">Copyright © 2005 
+    <td height="48" align="center" valign="top" class="bottomenu">Copyright © 2006 
 Miami Dade College.<br>
 Miami Dade College is an equal access equal opportunity institution  and does not discriminate on the basis of race, color, marital status, gender, age, religion, national origin or disability.<br>
       Questions? Visit our <a href="/contacts/">Contacts</a> page • <a href="mailto:webmaster@mdc.edu">Send Feedback</a> • <a href="http://www.mdc.edu/home/about/mission_statement">Mission Statement</a> <br>
