--- a/t/tr/tra/trafficpods.com.html
+++ b/t/tr/tra/trafficpods.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the trafficpods.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230215812id_/http%3A//www.trafficpods.com/about_privacy.jsp%3Fref%3DNONE) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the trafficpods.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615090555id_/http%3A//trafficpods.com/about_privacy.jsp%3Fref%3DNONE) for the most accurate reproduction.-->
 
 <html><!-- InstanceBegin template="/Templates/main.dwt.jsp" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -231,9 +231,8 @@ TP</a> | <a href="tour.jsp?ref=NONE">QuickTour</a>
                 <td width="242" rowspan="2" valign="top" bgcolor="EAEDE4" style="border-left: solid 1px #D9DCD3;">
 <table width="242" border="0" cellpadding="0" cellspacing="0" bgcolor="EAEDE4">
   <tbody><tr>
-    <td> 
+    <td> <form name="login" id="login" method="POST" action="login.jsp" style="padding:0; margin:0;">
 <table width="100%" border="0" align="center" cellpadding="3" cellspacing="0" bordercolor="#CCD2BF">
-<form name="login" id="login" method="POST" action="login.jsp"></form>
           <tbody><tr bordercolor="#B1BB9D" bgcolor="#B1BB9D"> 
             <td colspan="2"><strong> <font color="#FFFFFF">Member Login</font></strong></td>
           </tr>
@@ -253,7 +252,7 @@ TP</a> | <a href="tour.jsp?ref=NONE">QuickTour</a>
             <td> <input name="imageField" type="image" src="images/button_login.gif" width="88" height="26" border="0"></td>
           </tr>
         
-      </tbody></table>
+      </tbody></table></form>
       <div align="center"><br>
         <a href="register.jsp?ref=NONE"><img src="images/main_19.gif" alt="Free to Join - Best Traffic Exchange Program" width="181" height="64" border="0"></a> 
         <br>
