--- a/g/ga/gay/gaypornaccess.com.html
+++ b/g/ga/gay/gaypornaccess.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gaypornaccess.com privacy policy that was archived on 2005-10-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051018133735id_/http%3A//www.gaypornaccess.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gaypornaccess.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615091006id_/http%3A//gaypornaccess.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>GayPornAccess : One password... Infinite Porn !</title>
@@ -15,13 +15,13 @@
 <table border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td><img src="../skins/men/images/index_stats_1.gif" width="269" height="30"></td>
-    <td width="51" valign="top" background="../skins/men/images/index_stats_2.gif" class="nt-text" style="padding-top: 7px;"><strong>93</strong></td>
+    <td width="51" valign="top" background="../skins/men/images/index_stats_2.gif" class="nt-text" style="padding-top: 7px;"><strong>160</strong></td>
     <td valign="middle"><img src="../skins/men/images/index_stats_3.gif" width="108" height="30"></td>
-    <td width="56" valign="top" background="../skins/men/images/index_stats_4.gif" class="nt-text" style="padding-top: 7px;"><strong>698</strong></td>
+    <td width="56" valign="top" background="../skins/men/images/index_stats_4.gif" class="nt-text" style="padding-top: 7px;"><strong>940</strong></td>
     <td valign="middle"><img src="../skins/men/images/index_stats_5.gif" width="81" height="30"></td>
-    <td width="68" valign="top" background="../skins/men/images/index_stats_6.gif" class="nt-text" style="padding-top: 7px;"><strong>188</strong></td>
+    <td width="68" valign="top" background="../skins/men/images/index_stats_6.gif" class="nt-text" style="padding-top: 7px;"><strong>250</strong></td>
     <td valign="middle"><img src="../skins/men/images/index_stats_7.gif" width="93" height="30"></td>
-    <td width="68" valign="top" background="../skins/men/images/index_stats_8.gif" class="nt-text" style="padding-top: 7px;"><strong>3372 
+    <td width="68" valign="top" background="../skins/men/images/index_stats_8.gif" class="nt-text" style="padding-top: 7px;"><strong>5215 
       GB</strong> </td>
   </tr>
 </tbody></table>
