--- a/m/mi/mic/microwarehouse.co.uk.html
+++ b/m/mi/mic/microwarehouse.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the microwarehouse.co.uk privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231052052id_/http%3A//www.microwarehouse.co.uk/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the microwarehouse.co.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615091648id_/http%3A//www.microwarehouse.co.uk/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//MERUS//DTD XHTML-fValidate 1.0 Transitional//EN" "http://www.microwarehouse.co.uk/schema/xhtmlvalidate.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>
@@ -13,8 +13,11 @@
     <style type="text/css" media="all">@import url(/css/microiefix.css);</style>
   <![endif]-->
 
+<link rel="shortcut icon" href="/favicon.ico">
 <meta name="keywords" content="">
 <!--<script type="text/javascript" src="/js/drop.js"></script>-->
+<script type="text/javascript" src="/js/core-utils.js"></script>
+<script type="text/javascript" src="/js/behaviour.js"></script>
 </head>
 
 <body>
@@ -50,9 +53,10 @@
 
      <a href="/ec/basket.jtp" id="basketlink">
           
-            Your basket is empty
+	             Your basket is empty         
       </a>
 </div>
+
 
 	 
   <table width="566" border="0" cellpadding="0" cellspacing="0">
@@ -152,7 +156,7 @@
 	<form action="/action/quicksearch">
           <label class="noshow" for="keywords">Search: </label>
           <input id="keywords" name="keywords" type="text" class="text">
-          <img src="/misc/xmas/holly.gif" align="left"><input class="search-btn" src="/ui/search-btn.gif" alt="search" title="search" type="image">
+          <input class="search-btn" src="/ui/search-btn.gif" alt="search" title="search" type="image">
         </form>
 
 <div id="account">
@@ -160,7 +164,7 @@
 
 
     <li><a href="/ec/login.jtp?/privacy/">Log In</a></li>
-    <li><a href="/ec/register-user.jtp">Register</a></li>	
+    <li><a href="/ec/register-user.jtp">Register Now</a></li>	
 
 	</ul>	
 	</div>		    		
@@ -171,19 +175,19 @@
 		
       <ul>
 
-        <li><a href="/catalogue/computers%20&amp;%20notebooks/Apple%20Mac">Apple Mac</a></li>
+        <li><a href="/catalogue/computers%20&amp;%20laptops/Apple%20Mac">Apple Mac</a></li>
         <li><a href="/catalogue/cables">Cables</a></li>
         <li><a href="/catalogue/peripherals/Digital%20Camcorders">Camcorders</a></li>
         <li><a href="/catalogue/peripherals/Digital%20Cameras%20and%20Web%20Camera/Digital%20Cameras">Cameras</a></li>
         <li><a href="/catalogue/peripherals/CD|DVD%20Drives">CD/DVD Drives</a></li>
-        <li><a href="/catalogue/computers%20&amp;%20notebooks/Desktop%20Computing/Desktop%20PCs">Desktops</a></li>
-        <li><a href="/catalogue/computers%20&amp;%20notebooks/PDAs%20%7C%20GPS/GPS">GPS/Sat Nav</a></li>
+        <li><a href="/catalogue/computers%20&amp;%20laptops/Desktop%20Computing/Desktop%20PCs">Desktop PCs</a></li>
+        <li><a href="/catalogue/computers%20&amp;%20laptops/PDAs%20%7C%20GPS/GPS">GPS/Sat Nav</a></li>
         <li><a href="/catalogue/peripherals/Multimedia%20Accessories/Graphics%20Cards">Graphics Cards</a></li>
-	<li><a href="/action/search?error-url=%2Fcatalogue%2Fperipherals%2FProcessors+and+Memory%2FMemory&amp;root=peripherals%2FProcessors+and+Memory%2FMemory&amp;keywords=usb&amp;show-all=yes">Memory Sticks</a></li>
-        <li><a href="/catalogue/computers%20&amp;%20notebooks/Monitors">Monitors</a></li>
-	<li><a href="/action/search?error-url=%2Fcatalogue%2Fperipherals%2FExecutive+accessories%2FExecutive+Accessories&amp;root=peripherals%2FExecutive+accessories%2FExecutive+Accessories&amp;keywords=mp3+player&amp;show-all=yes">MP3 Players</a></li>
-        <li><a href="/catalogue/computers%20&amp;%20notebooks/Mobile%20Computing/Notebooks">Notebooks</a></li>
-        <li><a href="/catalogue/computers%20&amp;%20notebooks/PDAs%20%7C%20GPS/PDAs">PDA/Handheld</a></li>
+        <li><a href="/catalogue/computers%20&amp;%20laptops/Mobile%20Computing/Laptops">Laptops</a></li>
+        <li><a href="/catalogue/peripherals/Processors%20and%20Memory/USB%20Memory">Memory Sticks</a></li>
+        <li><a href="/catalogue/computers%20&amp;%20laptops/Monitors">Monitors</a></li>
+  	  <li><a href="/catalogue/peripherals/MP3%20%26%20Digital%20Audio">MP3 &amp; Digital Audio</a></li>
+        <li><a href="/catalogue/office%20supplies">Office Supplies</a></li>
         <li><a href="/catalogue/peripherals">Peripherals</a></li>
         <li><a href="/catalogue/printers%20&amp;%20office%20equipment/Presentation%20Equipment/Plasma%20Display">Plasma</a></li>
         <li><a href="/catalogue/printers%20&amp;%20office%20equipment/Presentation%20Equipment/Projectors">Projectors</a></li>
@@ -215,6 +219,15 @@
 <!--BEGIN_EXCLUDE-->
 <script language="javascript" type="text/javascript" src="/js/prophet.jsobj"></script>
 <!--END_EXCLUDE-->
+
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-308610-1";
+urchinTracker();
+</script>
+
+
 
 
 ~
