--- a/k/kf/kff/kffl.com.html
+++ b/k/kf/kff/kffl.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kffl.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218224748id_/http%3A//www.kffl.com/static/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kffl.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615093003id_/http%3A//www.kffl.com/static/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -8,6 +8,7 @@
 <meta name="KEYWORDS" content="fantasy football and baseball">
 <meta name="DESCRIPTION" content="KFFL - The Hottest NFL, MLB and Fantasy News!">
 
+		
 <link type="text/css" media="all" rel="stylesheet" href="/includes/layout.css">
 <link type="text/css" media="all" rel="stylesheet" href="/includes/mainnav.css">
 <link type="text/css" media="all" rel="stylesheet" href="/includes/homepages.css">
@@ -78,7 +79,7 @@
 
 			<ul id="sn1" class="subnav" onmouseover="clearTimeout(timerID1);menu('sn1','','show')" onmouseout="menu('sn1','','hide')">
 
-	        <li><a href="/static/about/why_kffl.php">Why KFFL?</a></li><li><a href="/static/sample/">Premium Samples</a></li><li><a href="/static/promotions/fantasy_jungle.php">Sweepstakes</a></li><li><a href="/shop/testimonials.php">Customer Testimonials</a></li><li><a href="/shop/?cat=3">Current and Most Popular Product</a></li><li><a href="/shop/?cat=2">Fantasy Football Services</a></li><li><a href="/shop/?cat=5">Fantasy Football Leagues</a></li><li><a href="/shop/?cat=1">NFL Services</a></li><li><a href="/shop/?cat=4">Fantasy Baseball Services</a></li></ul></li><li><a href="/hotwire/" onmouseover="menu('sn2','','show')" onmouseout="timerID2=setTimeout('menu(\'sn2\',\'\',\'hide\')',100)">DAILY NEWS</a>
+	        <li><a href="/static/about/why_kffl.php">Why KFFL?</a></li><li><a href="/static/sample/">Premium Samples</a></li><li><a href="/shop/testimonials.php">Customer Testimonials</a></li><li><a href="/shop/?cat=3">Current and Most Popular Product</a></li><li><a href="/shop/?cat=2">Fantasy Football Services</a></li><li><a href="/shop/?cat=5">Fantasy Football Leagues</a></li><li><a href="/shop/?cat=1">NFL Services</a></li><li><a href="/shop/?cat=4">Fantasy Baseball Services</a></li></ul></li><li><a href="/hotwire/" onmouseover="menu('sn2','','show')" onmouseout="timerID2=setTimeout('menu(\'sn2\',\'\',\'hide\')',100)">DAILY NEWS</a>
 
 			<ul id="sn2" class="subnav" onmouseover="clearTimeout(timerID2);menu('sn2','','show')" onmouseout="menu('sn2','','hide')">
 
@@ -90,11 +91,7 @@
 
 			<ul id="sn4" class="subnav" onmouseover="clearTimeout(timerID4);menu('sn4','','show')" onmouseout="menu('sn4','','hide')">
 
-	        <li><a href="/static/advertising/">Advertising</a></li><li><a href="/static/about/awards.php">Awards</a></li><li><a href="/static/about/background.php">Background</a></li><li><a href="/static/contact/">Contact KFFL</a></li><li><a href="/static/about/team.php">Management</a></li><li><a href="/static/about/press_releases.php">Press Releases</a></li><li><a href="/static/privacy.php">Privacy Policy</a></li><li><a href="/static/about/positions.php">Positions Available</a></li><li><a href="/faq/">Website FAQ</a></li><li><a href="/sitemap.php">Website Site Map</a></li><li><a href="/static/advertising/KFFLcom_press_kit.pdf">Website Press Kit</a></li></ul></li><li><a href="http://spinbox.kffl.com/?RC=5016244&amp;AI=1411" onmouseover="menu('sn5','','show')" onmouseout="timerID5=setTimeout('menu(\'sn5\',\'\',\'hide\')',100)">BetUS</a>
-
-			<ul id="sn5" class="subnav" onmouseover="clearTimeout(timerID5);menu('sn5','','show')" onmouseout="menu('sn5','','hide')">
-
-	        <li><a href="http://spinbox.kffl.com/?RC=5016245&amp;AI=1412">Live Lines</a></li><li><a href="http://spinbox.kffl.com/?RC=5016246&amp;AI=1413">Bonuses</a></li><li><a href="http://spinbox.kffl.com/?RC=5016247&amp;AI=1414">Poker Page</a></li><li><a href="http://spinbox.kffl.com/?RC=5016248&amp;AI=1415">Horses</a></li><li><a href="http://spinbox.kffl.com/?RC=5016249&amp;AI=1416">Locker Room</a></li><li><a href="http://spinbox.kffl.com/?RC=5016250&amp;AI=1417">Calendar</a></li><li><a href="http://spinbox.kffl.com/?RC=5016251&amp;AI=1418">BetUS Girls</a></li><li><a href="http://spinbox.kffl.com/?RC=5016252&amp;AI=1419">BetUS Radio</a></li><li><a href="http://spinbox.kffl.com/?RC=5016253&amp;AI=1420">Join Today</a></li></ul></li></ul>
+	        <li><a href="/static/advertising/">Advertising</a></li><li><a href="/static/about/awards.php">Awards</a></li><li><a href="/static/about/background.php">Background</a></li><li><a href="/static/contact/">Contact KFFL</a></li><li><a href="/static/about/team.php">Management</a></li><li><a href="/static/about/press_releases.php">Press Releases</a></li><li><a href="/static/privacy.php">Privacy Policy</a></li><li><a href="/static/about/positions.php">Positions Available</a></li><li><a href="/faq/">Website FAQ</a></li><li><a href="/sitemap.php">Website Site Map</a></li><li><a href="/static/advertising/KFFLcom_press_kit.pdf">Website Press Kit</a></li></ul></li></ul>
 <!-- cache hit -->
 </div>
 
@@ -126,10 +123,15 @@
 <p>KFFL reserves the right to modify its Privacy Policy at any time.</p>
 
 	</div><div class="onethirdboxred">
- <h3>Product of the Month</h3><p><b> Total Access Package</b> - 2005 Fantasy Football Coverage</p><p><b>Player Rankings, Breaking News, Weekly Newsletter, Team Reports and much more!</b></p><p><a href="/shop/buy/58">Click Here for more info</a></p>	</div> <div class="onethirdboxsilver">
+                <h3>Product of the Month</h3>
+		<p><b> Hot Off the Wire Complete</b> - For offseason movers and shakers</p>
+		
+<p><strong>The Latest News Reports, Statistical Breakdowns, Player Archives and Watchlist, Team Notebooks and more!</strong></p>
+		
+<p><a href="/shop/buy/17">SIGN UP TODAY!</a></p>	</div><div class="onethirdboxsilver">
 <h3>Latest Player News</h3>
 <p>
-<a href="/player/274/NFL">FB Brad Hoover</a><br><a href="/player/5916/NFL">TE Jason Witten</a><br><a href="/player/1053/NFL">RB Ricky Williams</a><br><a href="/player/5966/NFL">CB Terence Newman</a><br><a href="/player/5932/NFL">C Jeff Faine</a><br><a href="/player/9270/NFL">RB Steven Jackson</a><br><a href="/player/11518/NFL">QB Ryan Fitzpatrick</a><br><a href="/player/1766/NFL">QB Jamie Martin</a><br><a href="/player/607/NFL">RB Clinton Portis</a><br><a href="/player/6175/NFL">QB Chris Simms</a><br>	</p></div>
+<a href="/player/209/NFL">RB Travis Henry</a><br><a href="/player/993/NFL">RB Priest Holmes</a><br><a href="/player/9179/NFL">WR Braylon Edwards</a><br><a href="/player/11295/NFL">QB Charlie Frye</a><br><a href="/player/610/NFL">RB Reuben Droughns</a><br><a href="/player/409/NFL">WR Peter Warrick</a><br><a href="/player/6102/NFL">LB Clifton Smith</a><br><a href="/player/6105/NFL">LB Chaun Thompson</a><br><a href="/player/7686/NFL">LB Mason Unck</a><br><a href="/player/13782/NFL">LB D'Qwell Jackson</a><br>	</p></div>
 <!-- cache hit -->
 
 
@@ -156,7 +158,7 @@
 
 </div>
 
-<div id="footer">Copyright © 1996-2005 KFFL - All Rights Reserved.  Do Not Copy or Redistribute without prior written permission.</div>
+<div id="footer">Copyright © 1996-2006 KFFL - All Rights Reserved.  Do Not Copy or Redistribute without prior written permission.</div>
 
 
 
