--- a/w/we/web/webcentral.com.au.html
+++ b/w/we/web/webcentral.com.au.html
@@ -1,34 +1,60 @@
-<!--The following is the downloaded HTML source of the webcentral.com.au privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231122434id_/http%3A//webcentral.com.au/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webcentral.com.au privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615093003id_/http%3A//webcentral.com.au/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+
 		<title>Privacy Policy : Updated 19 July 2005 - WebCentral</title>
+
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+
 		<meta name="author" content="WebCentral">
-		<meta name="copyright" content="WebCentral 2005">
+
+		<meta name="copyright" content="WebCentral 2006">
+
 		<meta name="robots" content="index, follow">
+
 		<meta http-equiv="imagetoolbar" content="false">
+
 		<meta name="MSSmartTagsPreventParsing" content="true">		
+
 		<meta name="keywords" content="small business hosting, exchange mail hosting, website hosting, spam filtering, virus filtering, ecommerce">
+
 		<meta name="description" content="WebCentral business web hosting and business email services">
+
 		<!-- site base -->
-		<base href="http://www.webcentral.com.au/">
+
+		<base href="http://webcentral.com.au/">
+
 		<!-- stylesheet(s) -->
+
 		<link rel="stylesheet" href="library/styles/sme/screen.css" media="screen" type="text/css">
+
 		<link rel="stylesheet" href="library/styles/sme/print.css" media="print" type="text/css">
+
 		<!-- required javascript -->
+
 		<script type="text/javascript" src="/js/functions.js"></script>
+
 	</head>
+
 	<!-- start body -->
+
 	<body>
+
 		<!-- start global wrapper - wraps up all html between body tags -->
+
 		<div id="uberwrap">
+
 		
+
 			<!-- start global header information -->
+
 			<div id="pageheader">
+
 				
 <!-- start site header -->
 			<ul id="siteheader">
+				<li><a href="http://www.applicationmarketplace.com.au" title="WebCentral Application Marketplace" target="_blank">Marketplace</a></li>
 				<li><a href="http://www.webcentralenterprise.com.au" title="WebCentral Enterprise Solutions" target="_blank">Enterprise</a></li>
 				<li><a href="http://www.webcentralcorporate.com.au" title="WebCentral Corporate Solutions" target="_blank">Corporate</a></li>
 				<li><strong>Business</strong></li>
@@ -36,12 +62,20 @@
 				<li class="end"><a href="http://www.webcentralgroup.com/" title="WebCentral Group" target="_blank">Investors</a></li>
 			</ul>
 
-<!-- end site header -->				<a href="/"><img src="/library/images/sme/icons/webcentral.gif" title="visit the WebCentral home page" alt="WebCentral" width="120" height="65"></a>
-				<div id="sitelogo"><img src="/library/images/sme/icons/sme.gif" alt="business" width="400" height="50"></div>			</div>
+<!-- end site header -->
+				<a href="/"><img src="/library/images/sme/icons/webcentral.gif" title="visit the WebCentral home page" alt="WebCentral" width="120" height="65"></a>
+
+				<div id="sitelogo"><img src="/library/images/sme/icons/sme.gif" alt="business" width="400" height="50"></div>
+			</div>
+
 			<!-- end global header information -->
 
+
+
 				<!-- start page wrapper - holds background content -->
+
 				<div id="pagewrap">
+
 
 
 
@@ -56,12 +90,14 @@
 							<li><a href="/websitehosting.php?p=business">Business</a></li>
 							<li><a href="/websitehosting.php?p=professional">Professional</a></li>
 							<li><a href="/websitehosting.php?p=premier">Premier</a></li>
+							<li><a href="/websitehosting.php?p=premiera">Premier Advantage</a></li>
 						</ul>
 					</li>
 					<li><a href="/businessemail.php">Business Email</a>
 						<ul>
 							<li><a href="/businessemail.php">Overview</a></li>
 							<li><a href="/businessemail.php?p=managedexchange">Managed Exchange</a></li>
+							<li><a href="/corpexchange" target="_blank">Corporate Exchange</a></li>
 							<li><a href="/businessemail.php?p=blackberryaddon">BlackBerry Add-On</a></li>
 							<li><a href="/businessemail.php?p=businessmail30">BusinessMail 30</a></li>
 							<li><a href="/businessemail.php?p=spamtrap">SpamTrap</a></li>
@@ -71,6 +107,7 @@
 					<li><a href="/onlinebusinesstools.php">Online Tools</a>
 						<ul>
 							<li><a href="/onlinebusinesstools.php">Overview</a></li>
+							<li><a href="/onlinebusinesstools.php?p=biztechtoolkit">BizTech Toolkit</a></li>
 							<li><a href="/onlinebusinesstools.php?p=promotionsmanager">Promotions Manager</a></li>
 							<li><a href="/onlinebusinesstools.php?p=managedsharepoint">Managed SharePoint</a></li>
 							<li><a href="/onlinebusinesstools.php?p=siteshopsolo">SiteShop Solo</a></li>
@@ -98,6 +135,8 @@
 							<li><a href="/hostingaddons.php?p=sqlliteaddon">SQL Lite</a></li>
 							<li><a href="/hostingaddons.php?p=sqlstandardaddon">Standard SQL</a></li>
 							<li><a href="/hostingaddons.php?p=sqlpremieraddon">Premier SQL</a></li>
+							<li><a href="/hostingaddons.php?p=sitebuilderbasic">SiteBuilder Basic</a></li>
+							<li><a href="/hostingaddons.php?p=sitebuilderaddon">SiteBuilder Advanced</a></li>
 							<li><a href="/hostingaddons.php?p=coldfusionaddon">ColdFusion</a></li>
 							<li><a href="/hostingaddons.php?p=sslkey">Domain Specific SSL Key</a></li>
 							<li><a href="/hostingaddons.php?p=webforum">Web Forum</a></li>
@@ -121,6 +160,7 @@
 							<li><a href="/media.php?t=mediacoverage">Media Coverage</a></li>
 							<li><a href="/brochuresvideos.php">Brochures &amp; Videos</a></li>
 							<li><a href="/aboutus.php?p=careers&amp;t=overview">Careers</a></li>
+							<li><a href="/sitemap.php">Site Map</a></li>
 						</ul>
 					</li>
 					<li><a href="/contact.php">Contact Us</a>
@@ -299,11 +339,9 @@
 				<!-- start global page footer -->
 				
 <!-- start site icons -->
-<div class="halved" style="text-align:left;"><img src="/library/images/sme/icons/trophies.gif" alt="Microsoft Hosting Provider of the year 2004" width="350" height="66">
-</div>
-<div class="halved" style="text-align:right;">
-<a href="/iia.php" title="view IIA information"><img src="/library/images/sme/icons/iiafriendly.gif" alt="IIA family friendly ISP" width="118" height="66"></a>
-<a href="http://www.webcentralgroup.com.au/" title="go to the WebCentral Group website"><img src="/library/images/sme/icons/webcentralgroup.gif" alt="Part of the WebCentral Group" width="118" height="66"></a>
+<div class="fullwidth" style="text-align:left;"><img src="/library/images/sme/icons/trophies.gif" alt="Microsoft Hosting Provider of the year 2004" width="323" height="66"><img src="/library/images/sme/icons/msgoldcert.gif" alt="Microsoft Gold Certified Partner" width="90" height="66"><img src="/library/images/sme/icons/ages.gif" alt="Australian Government Endorsed Supplier" width="85" height="66">
+<a href="/iia.php" title="view IIA information"><img src="/library/images/sme/icons/iiafriendly.gif" alt="IIA family friendly ISP" width="91" height="66"></a>
+<a href="http://www.webcentralgroup.com.au/" title="go to the WebCentral Group website"><img src="/library/images/sme/icons/webcentralgroup.gif" alt="Part of the WebCentral Group" width="110" height="66"></a>
 </div>
 <!-- end site icons -->
 <!-- start site footer -->
