--- a/f/fr/fre/freeclipartnow.com.html
+++ b/f/fr/fre/freeclipartnow.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freeclipartnow.com privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217055059id_/http%3A//www.freeclipartnow.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freeclipartnow.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615093837id_/http%3A//www.freeclipartnow.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy - Free Clipart Now . com</title>
@@ -55,7 +55,7 @@
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=DesignAndCreatecom&adSpace=ROS&size=468x60&type=horiz&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=DesignAndCreatecom&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;requestID=20260504030.2877961756140379"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=DesignAndCreatecom&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;requestID=20260508970.28890817602911967"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=DesignAndCreatecom&adSpace=ROS&size=468x60&requestID=679596867" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=DesignAndCreatecom&adSpace=ROS&size=468x60&requestID=679596867" 
@@ -200,7 +200,7 @@ In the course of serving advertisements to this site, our third-party advertiser
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=DesignAndCreatecom&adSpace=ROS&size=160x600&type=var&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=DesignAndCreatecom&amp;adSpace=ROS&amp;size=160x600&amp;type=var&amp;requestID=20260504380.8280365439529349"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=DesignAndCreatecom&amp;adSpace=ROS&amp;size=160x600&amp;type=var&amp;requestID=20260510170.3968358851026177"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=DesignAndCreatecom&adSpace=ROS&size=160x600&requestID=1395200571" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=DesignAndCreatecom&adSpace=ROS&size=160x600&requestID=1395200571" 
@@ -228,7 +228,18 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 <!-- ALA OSA ALKAA -->
 <table width="100%" bgcolor="#00458a" height="25"><tbody><tr><td>
 <b><a href="http://www.freeclipartnow.com" style="color:95cfff">Free Clipart Now . com</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.designandcreate.com/forums/" style="color:95cfff">Forums</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.freeclipartnow.com/advertise.php" style="color:95cfff">Advertise</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.freeclipartnow.com/linktous.php" style="color:95cfff">Link To Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.freeclipartnow.com/privacy.php" style="color:95cfff">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.freeclipartnow.com/termsofuse.php" style="color:95cfff">Terms Of Use</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.freeclipartnow.com/contact.php" style="color:95cfff">Contact</a></b>
-<span class="whitetext" align="right">© 2005 FreeClipartNow.com</span>
+<a target="_top" href="http://t.extreme-dm.com/?login=clipnow">
+<img src="http://t1.extreme-dm.com/i.gif" height="1" border="0" width="1" alt=""></a><script language="javascript1.2"><!--
+EXs=screen;EXw=EXs.width;navigator.appName!="Netscape"?
+EXb=EXs.colorDepth:EXb=EXs.pixelDepth;//-->
+</script><script language="javascript"><!--
+EXd=document;EXw?"":EXw="na";EXb?"":EXb="na";
+EXd.write("<img src=\"http://t0.extreme-dm.com",
+"/c.g?tag=clipnow&j=y&srw="+EXw+"&srb="+EXb+"&",
+"l="+escape(EXd.referrer)+"\" height=1 width=1>");//-->
+</script><img src="http://t0.extreme-dm.com/c.g?tag=clipnow&amp;j=y&amp;srw=800&amp;srb=24&amp;l=" height="1" width="1"><noscript><img height=1 width=1 alt=""
+src="http://t0.extreme-dm.com/c.g?tag=clipnow&j=n"></noscript>
+<span class="whitetext" align="right">© 2006 FreeClipartNow.com</span>
 </td></tr></tbody></table>
 <!-- ALA OSA LOPPUU -->
 <!-- FOOTER END -->
